Initial test build

--- a/style.scss
+++ b/style.scss
@@ -159,3 +159,11 @@ table.table {
     background-color: #ffffff;
   }
 }
+
+.jodit-popup__content {
+  width: auto;
+}
+
+.jodit-ui-group__h1 {
+  display: none;
+}
